--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
